# SLOP

./: .bandit  .env.example  .factprobe-baseline.json  .gitignore  .gitleaks.toml  .handoff-sha  .linecount-baseline.json  .orphan-allowlist  .probe-health-baseline.json  .track-allowlist  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  MIGRATION.md  Makefile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.option-b.yml  docker-compose.yml  docker-entrypoint.sh  hypothesis.toml  install.sh  ms  ms-audit  ms-changelog  ms-check  ms-coverage  ms-enforce  ms-keploy  ms-mutmut  ms-postmortem  ms-refactor  ms-rule-contract  ms-schemathesis  ms-semgrep  ms-setup-tools  ms-status  (+16 more)
.claude/: AUTONOMOUS-DEFAULTS.md  ROBOT.md  SETTINGS-AUDIT.md  settings-wave-mode-profile.json  settings.json
backend/: requirements.txt
catalog/: MANIFEST_SPEC.md  registry.json
cli/: __init__.py  ms.py
docs/: ACCESS-REQUESTS.md  AGENT-EXPANSION-SURVEY.md  BACKLOG.md  CORE_RULES.md  COVERAGE-HANDOFF-AUDIT-REPORT.md  COVERAGE-HANDOFF-AUDIT.md  DEPLOY.md  DOCKER_INSTALL.md  GLOSSARY.md  INSTALL.md  KNOWLEDGE-LIFECYCLE-AUDIT-REPORT.md  KNOWLEDGE-LIFECYCLE-AUDIT.md  KNOWN_FLAKES.md  MANAGER-HANDOFF.md  MAP.md  MERGE-LOG.md  MIGRATION.md  POST-BATCH6-WAVE-MAP.md  PROBE-REGISTRY.md  RELEASE_NOTES_v5_0_0.md  REVIEW-LOG.md  RULES-TO-TESTS-AUDIT.md  RUN-ARCHIVE-FINDINGS-TRIAGE-batch11.md  SANCTIONED-CHANNELS.md  SANCTIONED-OPS-LOG.md  STRUCTURAL_RULES.md  WALK-BACK-LOG.md  observability.md
downloads/: 001_add_failed_status.sql  CORE_RULES.md  PROJECT_CLEANUP.md  deploy-1.1.sh  deploy-regenerate-schema-sql.py  deploy-schema.sql  migrations.py  ms-enforce  regenerate-schema-sql.py  schema.sql  self_heal.py  state.py  test_migrations.py  update_recommendations.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
installer/: DEPENDENCIES.md  SUPPORTED_DISTROS.md  _defaults.py  _run.py  backend.py  data_dir.py  deps_debian.py  detect.py  docker.py  fetch.py  frontend.py  install.py  main.py  post_install.py  prereq.py  readiness_manifest.yaml  service.py  smoke.py  state.py  uninstall.py  user.py
migrations/: 001_baseline.sql  README.md
tests/: TODO_health_check_fsm.md  conftest.py  test_access_request_appliers.py  test_access_requests_processor.py  test_adr_discipline.py  test_agent_api.py  test_agent_apply.py  test_agent_apply_safety.py  test_agent_autofix.py  test_agent_backoff.py  test_agent_classifier.py  test_agent_integrity.py  test_agent_listener.py  test_agent_scrub.py  test_agent_scrub_integration.py  test_agent_verify.py  test_agent_watcher.py  test_api_coverage.py  test_api_smoke.py  test_api_versioning.py  test_audit_backlog_stale.py  test_audit_doc_reality.py  test_audit_fact_freshness.py  test_audit_log.py  test_audit_memory_staleness.py  test_audit_merge_log_completeness.py  test_audit_merge_worktree_pattern.py  test_audit_orchestrator_dispatch.py  test_audit_orchestrator_prompt_format.py  test_audit_pass.py  test_audit_probe_aging.py  test_audit_redirect.py  test_audit_single_entity_hardcode.py  test_audit_status_file_freshness.py  test_audit_wave_subagent_preamble.py  test_autofix_scheduler.py  test_backlog_audit.py  test_backlog_park_triad.py  test_backlog_ring_registry.py  test_build_service_fragment_refactor.py  (+104 more)
tools/: access_request_appliers.py  analyze-tests.py  append_wave_doc.py  audit_archived_observations.py  audit_backlog_stale.py  audit_doc_reality.py  audit_fact_freshness.py  audit_memory_staleness.py  (+44 more)
(+287 files in other folders)
