[project]
name = "slop"
version = "0.1.0"
requires-python = ">=3.12"
# Production dependencies mirror requirements.txt.
# Policy: floor-only >=; upper caps only with a documented breakage reason.
# Full rationale: installer/DEPENDENCIES.md § Dependency-version policy
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.32.1",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "docker>=7.1.0",
    "pyyaml>=6.0.2",
    # Pydantic — cap at <3: v3 removes v1-compat shims used by manifest validators.
    "pydantic>=2.10.4,<3",
    # bcrypt — cap at <5: v5 API changes are unaudited; hold at v4.x until reviewed (S-46-A decision 2).
    "bcrypt>=4.0.0,<5",
    "structlog>=24",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.1",
    "prometheus-client>=0.25",
]

# ────────────────────────────────────────────────────────────────────────────
# vulture — dead-code detection (step 3.1)
# ────────────────────────────────────────────────────────────────────────────
# Heuristic, so kept as a `warning` not a block in CI. The ignores below
# cover dynamic-dispatch patterns vulture can't see:
#   - FastAPI route handlers (decorator-registered, called by Starlette)
#   - Wizard step functions (registered in run_wizard's STEP_FNS list)
#   - ms-coverage check functions (registered in tools/ms-coverage)
#   - Pydantic validators / dataclass fields (used via __init__)
#   - test_* / Test* (pytest collection)
[tool.vulture]
paths = ["backend"]
exclude = ["backend/scripts/", "backend/__pycache__/"]
min_confidence = 80
sort_by_size = true
# Decorator-registered handlers are invisible to vulture (called by
# the framework, not the codebase). Whitelist them by decorator name.
ignore_decorators = [
    "@app.*", "@router.*", "@limiter.*",
    "@register",      # backend/infra registry
    "@pytest.fixture",
    "@property", "@cached_property", "@staticmethod", "@classmethod",
]
ignore_names = [
    # ms-enforce / ms-coverage check_* registry (called via getattr)
    "check_*",
    # pytest collection — vulture misses pytest's auto-collection
    "test_*", "Test*",
    # Context manager dunder positional-only args
    "exc_tb", "exc_val", "exc_type",
    # FastAPI/Pydantic validator hook
    "__context",
    # SPA fallback: FastAPI requires the path param even if unused
    "full_path",
    # evaluate_model_compatibility — public API; system_ram_gb is
    # informational, kept for caller compatibility (see api/models.py)
    "system_ram_gb",
]


[tool.pytest.ini_options]
markers = [
    "slow: memory-intensive integration tests (deselect with -m 'not slow')",
    "browser: requires live Mediastack server + Chromium (deselect with -m 'not browser')",
    "docker: requires live Docker socket (deselect with -m 'not docker')",
    "mutation: mutation testing integration (slow, deselect with -m 'not mutation')",
    "real_smoke_test: opt out of conftest's autouse `_fast_smoke_test` fixture (run the real TCP-poll smoke test)",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
# addopts removed: --basetemp=/srv/tmp/pytest-base hardcoded server path blocked fresh worktrees + CI
tmp_path_retention_policy = "all"
timeout = 30   # pytest-timeout (requirements-dev.txt): kill any test that hangs

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest-asyncio>=1.4.0",
    "syrupy==5.1.0",
    "types-pyyaml>=6.0.12.20260518",
]
